# parallel-programming

./: README.md
LTSS-LAN/: omp_mat_mul.c
LTSS-LAN/HeatEq1D/: heatEq1D.m  heatPlot.m  main  main.c  run.sh  single_thread.h  spmd.h
LTSS-LAN/HeatEq2D/: heatEq.m  main_mpi  main_mpi.c  main_omp  main_omp.c  notes.txt  plotHeat.m  run.sh  utils.h
LTSS-LAN/MPIHeatEq/: main  main.c  run.sh  utils.h
Manh-Parallel/: CMakeLists.txt  DiffusionEquationC2(example).c  heat_equation_par.h  heat_equation_seq.h  laplace.txt  laplace_equation.h  main.c  max_in_matrix.h  mpi_heat.txt  mpi_heat_equation.h  mpi_heat_equation_2d.h  mpi_laplace_equation.h  mpi_matrix_multiplication.h  mpi_matrix_multiplication2.h  multiple_matrix.h  octave-workspace  openmp_heat_equation_2d.h  plott3.m  res3.txt  run.sh  sample.h  test.h  wave_equation_seq.h
OnThiMPI/: Chuong 0_1.ppt  LTSS_OpenMP.ppt  exam2  exam2.c  hello  hello.c  mypi  mypi.c
parallel_programming/: find_max.h  main.c  max_in_matrix.h
redo exam/: MPIloop.c  MPImulMatrix.c  MPImypi.c  MPIrun  a.out  bt1.c  bt2.c  maxInArray.c  mulMatrix.c  run  run.sh  sum1Array.c  sum2matrix.c
week12/: monan.c  plott.m
week3/: BT1Redo.c  a.out  bt1.c  bt2.c  bt2b.c  btSumArray.c  helloomp.c  helloworld.c  sumArr2chieu.c  sumArray.c
week4/: a.out  findmax.c  sum2matrix.c
week5/: a.out  multipleMatrix.c
week6/: matlab.txt  ptsong.c  task  wave_equation_seq.h
week7/: a.out  hellompi.c  sendprocess  sendprocess.c  task
week8/: multimatrix.c
week9/: DiffusionEquationC2.c  a.out  ptnhiet_mpi2.c  result2.txt
weekx/: need
(+43 files in other folders)
